@@ -26,8 +26,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>17</java.version>
-        <dss.version>6.0</dss.version>
+        <java.version>21</java.version>
+        <dss.version>6.2</dss.version>
         <gson.version>2.11.0</gson.version>
         <junit.version>5.10.2</junit.version>
         <slf4j.version>2.0.13</slf4j.version>
@@ -146,6 +146,10 @@
             <artifactId>dss-token</artifactId>
         </dependency>
         <dependency>
+            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <artifactId>dss-validation</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
@@ -158,6 +162,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.saxon</groupId>
+            <artifactId>Saxon-HE</artifactId>
+            <version>12.4</version>
         </dependency>
     </dependencies>
 
@@ -182,10 +191,6 @@
                     <executable>${jlink.jdk.path}${file.separator}bin${file.separator}javac</executable>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <compilerArgs>
-                        <arg>--add-exports</arg>
-                        <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -221,6 +226,36 @@
                                 <option>--strip-debug</option>
                                 <option>--strip-native-commands</option>
                             </options>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.5.0</version>
+                <executions>
+                    <execution>
+                        <id>import-root-ca</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>keytool</executable>
+                            <arguments>
+                                <argument>-importcert</argument>
+                                <argument>-trustcacerts</argument>
+                                <argument>-keystore</argument>
+                                <argument>${project.build.directory}${file.separator}preparedJDK${file.separator}lib${file.separator}security${file.separator}cacerts</argument>
+                                <argument>-storepass</argument>
+                                <argument>changeit</argument>
+                                <argument>-alias</argument>
+                                <argument>harica-rsa-root-2021</argument>
+                                <argument>-file</argument>
+                                <argument>${project.basedir}${file.separator}src${file.separator}main${file.separator}resources${file.separator}harica-rsa-2021.pem</argument>
+                                <argument>-noprompt</argument>
+                            </arguments>
                         </configuration>
                     </execution>
                 </executions>
